[tool]

[tool.poetry]
name = "sherlock"
version = "0.4.0a0"
description = "Distributed inter-process locks with a choice of backend"
license =  "MIT"
authors = [
    "Vaidik Kapoor <kapoor.vaidik@gmail.com>",
]
maintainers = [
    "Vaidik Kapoor <kapoor.vaidik@gmail.com>",
    "Judah Rand <17158624+judahrand@users.noreply.github.com>",
]
readme = "README.rst"
homepage = "https://github.com/py-sherlock/sherlock"
repository = "https://github.com/py-sherlock/sherlock"
keywords = ["locking"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "sherlock" },
]

[tool.poetry.dependencies]
python = "^3.7"

filelock = { version = "^3.7.1", optional = true }
kubernetes = { version = "^24.2.0", optional = true }
redis = { version = "^4.3.4", optional = true }
python-etcd = { version = "^0.4.5", optional = true }
pylibmc = { version = "^1.6.1", optional = true }

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-pyproject = "^1.1.0.post0"
mypy = "^0.981"
pycodestyle = "^2.9.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
tox = "^3.25.1"
tox-docker = { git = "https://github.com/judahrand/tox-docker.git", branch = "judah" }
tox-gh-actions = "^2.9.1"
tox-poetry = "^0.4.1"

types-filelock = "^3.2.7"
types-redis = "^4.3.21"

[tool.poetry.extras]
all = [
    "filelock",
    "kubernetes",
    "redis",
    "etcd",
    "pylibmc",
]
filelock = ["filelock"]
kubernetes = ["kubernetes"]
redis = ["redis"]
etcd = ["python-etcd"]
memcached = ["pylibmc"]

[tool.isort]
profile = "black"
src_paths = ["sherlock", "tests"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
